feat: bundle lesson content for deployment - auto-generate lessons.bundle.json during build to support serverless deployment

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/generateLessonsBundle.js && next build",
     "start": "next start",
     "lint": "next lint",
     "prebuild": "node scripts/generateLessonsBundle.js"
